--- a/FacultyFlow/faculty_feedback_dashboard.html
+++ b/FacultyFlow/faculty_feedback_dashboard.html
@@ -260,7 +260,7 @@
         const feedbackChart = new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ['Positive Feedback', 'Negative Feedback', 'Responded'],
+                labels: ['Positive Feedback', 'Negative Feedback', 'Unresponded'],
                 datasets: [{
                     label: 'Feedback Count',
                     data: [15, 5, 10],
