--- a/SuperuserFlow/supeeruser_analytical_dashboard.html
+++ b/SuperuserFlow/supeeruser_analytical_dashboard.html
@@ -108,7 +108,7 @@
                         <a class="nav-link" href="../SuperuserFlow/superuser_user_dashboard.html">User Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../SuperuserFlow/supeeruser_analytical_dashboard.html">Analytical Dashboard</a>
+                        <a class="nav-link" href="../SuperuserFlow/supeeruser_analytical_dashboard.html">Analytics Dashboard</a>
                     </li>
                 </ul>
                 <!-- User Dropdown with Profile Picture -->
@@ -131,7 +131,7 @@
 
     <!-- Content Container -->
     <div class="content-container">
-        <h1 class="mb-4">LearnZilla Analytical Dashboard</h1>
+        <h1 class="mb-4">LearnZilla Analytics Dashboard</h1>
         <p>Welcome to the superuser dashboard. Here you can review system-wide analytics, performance metrics, and user engagement for the LearnZilla AI Chat Bot.</p>
 
         <!-- Overview Stats -->
@@ -157,7 +157,7 @@
             <div class="col-md-3">
                 <div class="stat-card">
                     <h3>92%</h3>
-                    <p>User Satisfaction Rate</p>
+                    <p>Completed Feedback</p>
                 </div>
             </div>
         </div>
