--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Example Superuser Flow</h5>
-                <p class="card-text">Access tools and resources for advisors.</p>
+                <p class="card-text">Access tools and resources for superusers.</p>
                 <a href="SuperuserFlow/login.html" class="btn btn-temple">Start Flow</a>
             </div>
         </div>
