--- a/SuperuserFlow/supeeruser_analytical_dashboard.html
+++ b/SuperuserFlow/supeeruser_analytical_dashboard.html
@@ -183,7 +183,7 @@
 
             <!-- Adjusting layout so sentiment chart takes full width -->
             <div class="col-md-6">
-                <h4>Sentiment Analysis (Selected Period)</h4>
+                <h4>Sentiment Analysis</h4>
                 <canvas id="sentimentChart"></canvas>
             </div>
         </div>
